# Tiksmart-BE

./: .env  .env.example  Cargo.toml  readme.md
docs/: readme copy.md
migrations/: 20250725133510_add_role_to_users.sql  20250725133511_create_organizer_profile.sql  20250725133511_create_users_table.sql  20250725133512_create_permission_table.sql  20250725133513_create_admin.sql  20250725133513_create_project_table.sql  20250725133514_create_categories.sql  20250725133514_create_roles_table.sql  20250725133515_create_members_table.sql  20250725133515_create_venues.sql  20250725133516_create_events.sql  20250725133516_create_tasks_table.sql  20250725133517_create_attractions.sql  20250725133518_create_event_sessions.sql  20250725133519_create_ticket_tiers_and_offers.sql  20250725133520_create_seating_charts.sql  20250725133521_create_orders.sql  20250725133522_create_tickets.sql  20250725133523_create_payments.sql  20250725133524_add_stripe_account_id_to_organizers.sql  20250725133555_create_tasks_required_roles_table.sql  2025072513358_create_users_table.sql  20250725133612_create_subtasks_table.sql  20250725133635_create_tasks_contributors_table.sql  20250728034845_add_password_reset_to_users.sql
src/: main.rs
src/api/: attraction_handler.rs  auth_handler.rs  category_handler.rs  csrf_handler.rs  event_handler.rs  member_handler.rs  mod.rs  order_handler.rs  organizer_handler.rs  payment_handler.rs  pricing_handler.rs  project_handler.rs  role_handler.rs  seating_handler.rs  subtask_handler.rs  task_handler.rs  ticket_handler.rs  user_handler.rs  venue_handler.rs  websocket_handler.rs
src/clients/: order_service.rs  stripe_client.rs
src/config/: mod.rs
src/db/: admin_query.rs  attraction_query.rs  category_query.rs  event_query.rs  member_query.rs  mod.rs  order_query.rs  organizer_query.rs  payment_query.rs  pool.rs  pricing_query.rs  project_query.rs  role_query.rs  seating_query.rs  subtask_query.rs  task_query.rs  ticket_query.rs  user_query.rs  venue_query.rs
src/errors/: mod.rs
src/middleware/: admin_guard.rs  auth_guard.rs  csrf_guard.rs  mod.rs
src/models/: attraction.rs  auth.rs  category.rs  event.rs  member.rs  mod.rs  order.rs  payment.rs  permission_tier.rs  pricing.rs  project.rs  role.rs  seating.rs  subtask.rs  task.rs  ticket.rs  user.rs  venue.rs
src/path/: mod.rs
src/service/: attraction_service.rs  auth_service.rs  category_service.rs  event_service.rs  member_service.rs  mod.rs  order_service.rs  organizer_service.rs  payment_service.rs  pricing_service.rs  project_service.rs  role_service.rs  seating_service.rs  subtask_service.rs  task_service.rs  ticket_service.rs  user_service.rs  venue_service.rs
src/utils/: csrf.rs  jwt.rs  mod.rs  random.rs  validation.rs
