[package]
name = "axum_hello_world"
version = "0.14.1"
edition = "2024"

[dev-dependencies]
sqlx-cli = { version = "0.7", features = ["postgres"] }


[dependencies]
# Server
axum = "0.7.5"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5.2"
tower_governor = "0.3"
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
hyper = { version = "0.14.27", features = ["full"] }

# Sql
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "set-header", "tls-native-tls", "macros", "chrono"]}

# Serde
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

# Env
dotenvy = "0.15.7"

# Security
bcrypt = "0.15"
jsonwebtoken = "9.3"
validator = { version = "0.18", features = ["derive"] }

# Configs
config = "0.14.0" # <-- THE FIX: No features needed!

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
thiserror = "1.0"

# Utilities
regex = "1"
once_cell = "1.19"
rand = { version = "0.8", features = ["getrandom"] }
itertools = "0.12"
chrono = { version = "0.4.41", features = ["serde"] }
