[package]
name = "axum_hello_world"
version = "0.16.0"
edition = "2024"

[dev-dependencies]
sqlx-cli = { version = "0.7", features = ["postgres"] }


[dependencies]
# Server
axum = { version = "0.7", features = ["ws"] } 

tokio = { version = "1.0", features = ["full"] }
tower = "0.5.2"
tower_governor = "0.3"
tower-cookies = { version = "0.10.0", features = ["private"] }
tower-http = { version = "0.5", features = ["cors", "set-header", "fs"] }
hyper = { version = "0.14.27", features = ["full"] }

# Sql
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "chrono", "uuid", "rust_decimal", "macros"] }

# Serde
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

# Env
dotenvy = "0.15.7"

# Security
bcrypt = "0.15"
jsonwebtoken = "9.3"
validator = { version = "0.16", features = ["derive"] }
axum_csrf = "0.11.0"
axum-extra = { version = "0.9.6", features = ["cookie-private"] }
cookie = "0.18"
axum-core = "0.4.5"

# Configs
config = "0.14.0" 

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
thiserror = "1.0"

# Utilities
regex = "1"
sha2 = "0.10"
once_cell = "1.19"
rand = { version = "0.8", features = ["getrandom"] }
itertools = "0.12"
chrono = { version = "0.4.41", features = ["serde"] }
csrf = "0.5.0"
lazy_static = "1.4"
hex = "0.4.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
rust_decimal = "1.33"
rust_decimal_macros = "1.33"

# WebSockets
tokio-tungstenite = "0.21"
tokio-stream = "0.1" # Useful for websocket streams
tokio-util = { version = "0.7", features = ["codec"] } # For framed streams
futures = "0.3" # For async stream operations
dashmap = "6.1.0"

# Stripe
async-stripe = { version = "0.41", features = ["runtime-tokio-hyper"] }
num-traits = "0.2.19"
